<resources>
    <string name="app_name">MartBee</string>
    <string name="myTripleKey">asdf-4yo9-21mkjh</string>
    <string name="placesKey">AIzaSyB4CPqqhVMPCH9VEOBtMu_gRRhaVh0SWrU</string>
<!--    <string name="maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB4CPqqhVMPCH9VEOBtMu_gRRhaVh0SWrU</string>-->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>
    <string name="mService">mService</string>

    <string name="some_thing_went_wrong">Something went wrong. Please try again!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit_option">Submit</string>
    <string name="pincode">+60</string>
    <string name="image_desc">Image Desc</string>
    <string name="enter_otp">Enter TAC</string>
    <string name="please_enter_otp_text">Please enter TAC sent to </string>
    <string name="verify_option">Verify</string>
    <string name="resend_otp">Resend TAC</string>
    <string name="enter_mbl_txt">Enter Mobile Number</string>
    <string name="sms_info">4 digit TAC will be sent via SMS.</string>
    <string name="create_your_store">Create Store</string>
    <string name="store_name">Store Name*</string>
    <string name="upload_text">Upload</string>
    <string name="select_category">Select Category*</string>
    <string name="select_address">Select Address*</string>
    <string name="device_dont_have_camera">Sorry! Your device doesn\'t support camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add Image!</string>
    <string name="some_issues_text">Some issues occurred, please wait few minutes</string>
    <string name="search_content">Search</string>
    <string name="add_your_category">Add My Business Category</string>
    <string name="category_not_listed">If your category not listed?</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="your_loc">Your Geo Location</string>
    <string name="select_location">Select Location</string>
    <string name="ok_option">OK</string>
    <string name="store_created_success">Store Created \n Successfully!</string>
    <string name="welcome_option">Welcome</string>
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_account">Account</string>
    <string name="maintain_store">Maintain Store</string>
    <string name="vist_edit_store">Visit/Edit Store</string>
    <string name="advertise_store">Advertise your Online Store</string>
    <string name="share_store_link">Share your Store Link</string>
    <string name="search_products">Search Products</string>
    <string name="change_text">Change</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_txt">Profile</string>
    <string name="orders_txt">Orders</string>
    <string name="products_txt">Products</string>
    <string name="reports_txt">Reports</string>
    <string name="home_txt">Home</string>
    <string name="address_text">Address</string>
    <string name="profile_updated_success">Profile Updated Successfully.</string>
    <string name="welcome_text">Welcome</string>
    <string name="new_peoduct_text">Add Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_image_text">Product Image*: </string>
    <string name="upload_small_text">Upload</string>
    <string name="product_name">Product Name*</string>
    <string name="select_subcate">Select Sub Category*</string>
    <string name="payment">Payment</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="delivery">Delivery</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="add_product_text">Add Product</string>
    <string name="stock_text">Stock</string>
    <string name="product_quantity">Quantity*</string>
    <string name="type_text">Type*</string>
    <string name="price_text">Price</string>
    <string name="product_sellprice">Sell Price*</string>
    <string name="discount_text">Discount</string>
    <string name="product_discount_price">Discount Price*</string>
    <string name="subcategory_not_listed">If your sub-category not listed?</string>
    <string name="add_sub_category">Add Sub-Category</string>
    <string name="sorry_text">SORRY&#8230;!</string>
    <string name="no_data_found_text">No Data Found</string>
    <string name="subcategory">SubCategory</string>
    <string name="product_desc">Product Description*</string>
    <string name="product_uom">UOM*</string>
    <string name="please_select_uom">Please select </string>
    <string name="view_all_text">View All</string>
    <string name="product_edit_text">Edit</string>
    <string name="product_delete_text">Delete</string>
    <string name="product_details">Product Details</string>
    <string name="old_price"><strike> RM 1500 </strike></string>
    <string name="description_txt">Description</string>
    <string name="static_text">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="from_text">from</string>
    <string name="stock_with_colon">Stock :</string>
    <string name="colon_only">:</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="version_text">"Version : "</string>
    <string name="sub_category_text">Sub Category*</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="search_sub_category">Search Sub Category</string>
    <string name="category_necessary">Category*</string>
    <string name="business_category_necessary">Business Category*</string>
    <string name="address_necessary">Address*</string>
    <string name="select_your_address">Select Your Address</string>
    <string name="camera_txt">Camera</string>
    <string name="gallery_txt">Gallery</string>
    <string name="no_orders_found">No Orders Found.</string>
    <string name="order_no_text">Order. No:</string>
    <string name="total_text">Total: </string>
    <string name="ordered_on">Ordered on: </string>
    <string name="total_amount_text">Total Amount: </string>
    <string name="order_details">Order Details</string>
    <string name="quantity_text">Qty: </string>
    <string name="price_val_text">Price: </string>
    <string name="select_status">Select Status: </string>
    <string name="update_txt">Update</string>
    <string name="order_summary">Order Summary</string>
    <string name="status_text">Status</string>
    <string name="comments">Comments*</string>
    <string name="order_update">Order Update</string>
    <string name="order_from">order from</string>
    <string name="no_reports_found">No Reports Found.</string>
    <string name="completed">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="report_no_text">Report. No:</string>
    <string name="at_text">at</string>
    <string name="report_details">Report Details</string>
    <string name="product_summary">Product Summary</string>
    <string name="order_history">Order History</string>
    <string name="reason_text">Rejected Reason</string>
    <string name="open_settings">Do you wanto to open Settings?</string>
    <string name="no_internet">No Internet&#8230;!</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
    <string name="start_time">Starting Time*</string>
    <string name="close_time">Closing Time*</string>
    <string name="search_rders">Search Orders</string>
    <string name="search_completed_reports">Search Reports</string>
    <string name="search_rejected_reports">Search Reports</string>
    <string name="rejected_on">Rejected on: </string>
    <string name="delivered_on">Delivered on: </string>
    <string name="account_txt">Account</string>
    <string name="edit_txt">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="share_more_earn_more">Share More&#8230; Earn More&#8230;</string>
    <string name="store_link_static_text">Share store link to your customers and get more Orders.</string>
    <string name="copy_text">Copy</string>
    <string name="store_status_text">Your Store Status</string>
    <string name="all_text">All</string>
    <string name="store_views">Store Views</string>
    <string name="product_views">Product Views</string>
    <string name="orders_text">Orders</string>
    <string name="revenues">Revenue</string>
    <string name="pending_list_txt">Pending to confirm</string>
    <string name="menu_today">Today</string>
    <string name="menu_yesterday">Yesterday</string>
    <string name="menu_last_week">Last Week</string>
    <string name="menu_last_month">Last Month</string>
    <string name="menu_all">All</string>
    <string name="edit_category">Edit</string>
    <string name="delete_category">Delete</string>
    <string name="category_title">Category</string>
    <string name="no_pending_orders">You\'ve no pending orders</string>
    <string name="menu_categories">Categories</string>
    <string name="categories_txt">Categories</string>
    <string name="add_categoryy">Add</string>
    <string name="location">Location*</string>
    <string name="pending_orders_txt">Pending Orders</string>
    <string name="order_accept">Accept</string>
    <string name="order_reject">Reject</string>
    <string name="change_mobile_number">Entered a wrong number?</string>
    <string name="new_product_category">Add Category</string>
    <string name="no_sales_report_found_text">No Sales Report Found</string>
    <string name="no_product_report_found_text">No Product Report Found</string>
    <string name="yearly_report_txt">Yearly Report</string>
    <string name="account_details_text">Account details</string>
    <string name="account_text">Account</string>
    <string name="account_holder_name_text">Account Holder Name</string>
    <string name="account_number_text">Account Number</string>
    <string name="bank_name_text">Bank Name</string>
    <string name="save_text">Save</string>
    <string name="add_account_text">Add Account</string>
    <string name="payment_option_txt">Payment Option</string>
    <string name="bank_transfer_text">Bank transfer</string>
    <string name="order_chat">Chat</string>
    <string name="payment_details">Payment details</string>
    <string name="cash_on_delivery_payment">Cash on delivery</string>
    <string name="important_text">Important</string>
    <string name="cod_payment_description">**Any discrepancy in payment and/or stock availability, please contact your buyer or reject this order.</string>
    <string name="proof_of_payment_text">Proof of payment</string>
    <string name="bt_description_one">**Please check your bank account to confirm the receiving of payment from customer before accept this order.</string>
    <string name="bt_description_two">**Any discrepancy in payment and/or stock availability, please contact your buyer.</string>
    <string name="attachment_txt">Attachment</string>
    <string name="update_required">Please update our app to use latest features.</string>
</resources>