<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home" />

    <!--<item
        android:id="@+id/menu_nav_products"
        android:title="@string/menu_products"
        android:icon="@drawable/ic_products"/>-->

    <item
        android:id="@+id/menu_nav_order"
        android:title="@string/menu_orders"
        android:icon="@drawable/ic_orders"/>

    <item
        android:id="@+id/menu_reports"
        android:title="@string/menu_reports"
        android:icon="@drawable/ic_reports"/>

    <item
        android:id="@+id/menu_nav_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_accounts"/>
</menu>