<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottoms"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_border"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/museosans"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/otp_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/museosans"
        android:gravity="center"
        android:text="@string/please_enter_otp_text"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            app:height="40dp"
            app:width="40dp"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:length="4"
            app:otp_text_size="24dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:fontFamily="@font/museosans"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/otp_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:fontFamily="@font/museosans"
            android:gravity="center"
            android:text="in 02:00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="25dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/yellow_btn_color"
        android:text="@string/verify_option"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/change_mobile_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/museosans"
        android:gravity="center"
        android:text="@string/change_mobile_number"
        android:textColor="@color/gray_btn_bg_pressed_color"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</LinearLayout>